Fixed eye icon on mobile (hopefully)

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -23,12 +23,6 @@ body:has(.hidden) {
     }
 }
 
-.material-symbols-rounded {
-    pointer-events: none;
-    font-size: inherit;
-    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
-}
-
 div:has(img) {
     display: flex;
     flex-direction: column;
@@ -74,10 +68,6 @@ img {
     &.shuffle {
         bottom: var(--_margin);
     }
-}
-
-:has(.hidden) button.visibility .material-symbols-rounded {
-    font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
 form {
